# hPGS

./: Config.hs  Setup.lhs  hPGS.cabal
csrc/: fortran2c.h  libFmcfio.sym  libpgslib.sym  libpythiaext.sym  libstdhep.sym  olympics.h  pgslib.c  pgslib.h
exe/: hpgs.hs
fsrc/: pgs_olympics.f
lib/HEP/Package/PGS/: Command.hs  Job.hs  Type.hs
lib/HEP/Package/PGS/Olympics/: FFI.hsc
lib/HEP/Package/PGS/PGSLIB/: Internal.hsc
test/: test.hs
